cleanup(mapper): remove stale imports and simplify collection mapping